fix: add bus implementation and scram library

--- a/build.gradle
+++ b/build.gradle
@@ -206,6 +206,7 @@ project(':common') {
     compile "io.vertx:vertx-redis-client:$vertxVersion"
     compile "com.ongres.scram:client:$scramClientVersion"
     compile "io.vertx:vertx-pg-client:$vertxVersion"
+    compile "com.ongres.scram:client:$scramVersion"
     compile "org.mongodb:mongodb-driver-async:$mongoVersion"
     compile ("io.vertx:vertx-mongo-client:$vertxVersion") {
       exclude group: 'org.mongodb', module: 'mongodb-driver-async'
