--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ modowner=org.entcore
 modname=ent-core
 
 # Your module version
-version=4.12.1-connecteurs
+version=4.12.1-connecteurs-rc+2
 
 # The test timeout in seconds
 testtimeout=300
