--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ modowner=org.entcore
 modname=ent-core
 
 # Your module version
-version=5.0-SNAPSHOT
+version=5.0-CGI
 
 # The test timeout in seconds
 testtimeout=300
