--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "axios": "0.15.3",
     "core-js": "^2.4.1",
     "entcore": "dev",
-    "entcore-generic-icons": "https://github.com/edificeio/generic-icons.git",
+    "entcore-generic-icons": "npm:ode-csslib@dev-cgi",
     "entcore-toolkit": "^1.0.1",
     "humane-js": "^3.2.2",
     "jquery": "^3.2.1",
@@ -75,8 +75,8 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "merge2": "^1.0.3",
-    "ode-ngjs-front": "dev",
-    "ode-ts-client": "dev",
+    "ode-ngjs-front": "dev-cgi",
+    "ode-ts-client": "dev-cgi",
     "sass-loader": "^13.0.2",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^3.1.1",
